cm4all-workshop (6.0.22) unstable; urgency=low

  * cron: set the HOME environment variable
  * cron: set CHDIR only if not set by translation server
  * cron: allow translation server to specify timeout
  * state: change path to "workshop/cron/NAME/enabled"
  * control: add packet RELOAD_STATE

 --   

cm4all-workshop (6.0.21) unstable; urgency=low

  * cron: on timeout, log "Timeout" in cronresults instead of "Canceled"
  * cron: implement control command TERMINATE_CHILDREN
  * cron: enable/disable queues with files in "state" directories
  * control: switch to the beng-proxy control protocol
  * control: accept VERBOSE, DISABLE_QUEUE, ENABLE_QUEUE only from local clients
  * systemd: depend on "cm4all-spawn-accessory.socket", not ".service"

 -- Max Kellermann <mk@cm4all.com>  Tue, 16 Jan 2024 21:46:34 +0100

cm4all-workshop (6.0.20) unstable; urgency=low

  * systemd: keep CAP_CHOWN/CAP_FSETID (needed for `cgroups_writable_by_gid`)
  * systemd: add "Wants=cm4all-spawn-reaper.service"
  * systemd: add "After=cm4all-spawn-accessory.service" 
  * debian: adjust dependencies to splitted "cm4all-spawn" packages

 -- Max Kellermann <mk@cm4all.com>  Mon, 04 Dec 2023 15:26:54 +0100

cm4all-workshop (6.0.19) unstable; urgency=low

  * fix exit status/signal reporting
  * spawn: add setting `cgroups_writable_by_gid`

 -- Max Kellermann <mk@cm4all.com>  Fri, 01 Dec 2023 17:36:25 +0100

cm4all-workshop (6.0.18) unstable; urgency=low

  * translation: add packet MAPPED_UID_GID

 -- Max Kellermann <mk@cm4all.com>  Thu, 16 Nov 2023 15:24:49 +0100

cm4all-workshop (6.0.17) unstable; urgency=low

  * translation: time out after 30 seconds
  * spawn: do not ignore SIGTERM in spawned processes
  * make libcap, libseccomp, libsystemd optional

 -- Max Kellermann <mk@cm4all.com>  Mon, 06 Nov 2023 22:59:52 +0100

cm4all-workshop (6.0.16) unstable; urgency=low

  * spawn: don't follow symlinks for BIND_MOUNT

 -- Max Kellermann <mk@cm4all.com>  Wed, 04 Oct 2023 09:18:59 +0200
