@@ -25,6 +25,7 @@
 #  database_schema "foo"
 #  translation_server "@translation"
 #  qmqp_server "localhost"
+#  default_timeout "5 minutes"
 #}
 
 #control {
